# blink

./: .eslintignore  .eslintrc  .gitignore  .prettierignore  .prettierrc.json  LICENSE  README.md  index.html  jest.config.js  lint-staged.config.js  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json  vite.config.ts
docs/: testing.md
docs/private/: ARCHITECTURE.md  DEVELOPMENT.md  FEATURES.md  IMPLEMENTATION.md  P0_IMPLEMENTATION_GUIDE.md  README.md  TESTING.md  (+1 more)
scripts/: build-extensions.sh  copy-webview-shims.sh  dev.sh  patch-webview.py  run-extension-flow-test.sh  test-utils.sh  verify-feature.sh
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: ai-sidecar.js  extension-host-sidecar.js
src-tauri/capabilities/: default.json
src-tauri/resources/extensions/builtin/blink-office-custom-editors/: README.md  package-lock.json  package.json
src-tauri/resources/extensions/builtin/blink-office-custom-editors/src/: extension.ts
src-tauri/scripts/: package-lock.json  package.json  pptx-service.js
src-tauri/src/: lib.rs
src-tauri/src/channels/: channel.rs  extension_host_channel.rs  messages.rs  mod.rs  router.rs
src-tauri/src/commands/: ai_chat.rs  channel_router.rs  documents.rs  extension_host.rs  extensions.rs  mod.rs  terminal.rs  vscode_server.rs
src-tauri/src/services/: document_service.rs  environment.rs  excel.rs  extension_host_error.rs  extension_host_manager.rs  extension_scanner.rs  file_service.rs  logger.rs  mod.rs  powerpoint.rs  registry.rs  word.rs
src-tauri/src/test_server/: bridge.rs  commands.rs  handlers.rs  mod.rs  types.rs
(+167 files in other folders)
